grammar.js
		source_file: $ => seq(
      optional($.package_clause),
      repeat($.top_level),
			repeat(choice($.Token_Invalid, $.Token_EOF))
    ),

		top_level: $ => seq(
			choice(
				//$.import_declaration,
				//$.foreign_block,
				$._statement,
				$.compound_literal,
			),
		),

    package_clause: $ => seq($.Token_package, $._package_identifier),

    import_declaration: $ => seq(
			optional(alias($.Token_foreign, $.keyword)),
      alias($.Token_import, $.keyword),
      optional(field('name', 
										 $._package_identifier
										)),
			choice(
				field('path', $.Token_String),
				seq($.Token_OpenBrace,
						optional($.Token_Semicolon),
						list1($.Token_Comma, $.Token_String),
						optional($.Token_Comma),
						$.Token_CloseBrace)),
    ),

    _statement: $ => choice(
      $._simple_statement,
      $.if_statement,
      $.switch_statement,
      $.for_statement,
      $.block_statement,
      $.defer_statement,
      $.using_statement,

			$._parenthesized_expression, // for #assert(1 == 1)
			$.foreign_block,
			$.import_declaration,
			$.right_unary_expression,
			$.Token_fallthrough,
    ),

    block: $ => prec(1, seq(
      $.Token_OpenBrace,
      list($.Token_Semicolon, optional($._statement)),
      $.Token_CloseBrace,
    )),

    declaration: $ => prec.right(1, seq(
      field('name', list1($.Token_Comma, alias($.Token_Ident, $.decl_identifier))),
      alias($.Token_Colon, $.operator),
			choice(
				field('type', $._type),
				seq($.Token_OpenParen, field('type', $.Token_Ident), $.Token_CloseParen),
				choice(seq(optional(field('type', $._type)),
									 alias($.Token_Colon, $.operator),
									 optional(alias($.Token_distinct, $.keyword)),
									 field('const_value', list1($.Token_Comma, choice($._expression, $.compound_literal))),
									),
							 seq(optional(field('type', $._type)),
									 alias($.Token_Eq, $.operator),
									 field('variable_value', list1($.Token_Comma, choice($._expression, $.compound_literal, $.Token_Undef))),
									)),
			)
    )),

    _type: $ => seq(
      choice(
        alias($._proc_type, $.proc_type),
        $._simple_type,
				alias($.proc_call, $.parapoly)
      ),
    ),

    _simple_type: $ => choice(
      alias($.Token_Ident, $.type_identifier),
      alias($.selector_expression, $.type_identifier),
      seq(optional(alias($.Token_Dollar, $.operator)),
					$._type_identifier,
				 ),
      $.map_type,
      $.pointer_type,
      $.bit_set_type,
      $.matrix_type,
      $.array_type,
      $.struct_type,
      $.enum_type,
      $.union_type,
			$.Token_typeid,
    ),

    pointer_type: $ => prec(op_prec.l_unary, seq(
			optional(seq($.Token_OpenParen, alias($.Token_Ident, $.pragma_identifier), $.Token_CloseParen)), // for #relative(i16)			
      alias($.Token_Pointer, $.operator), field('type', $._type),
    )),
		
		array_type_prefix: $ => prec.right(repeat1(seq(
			$.Token_OpenBracket,
			optional(field(
				'size',
				choice(
					$._expression,
					alias($.Token_Pointer, $.operator),
					alias($.Token_Question, $.operator),
					alias($.Token_dynamic, $.keyword),
				)
			)),
			$.Token_CloseBracket,
		))),
		
    array_type: $ => prec.right(op_prec.l_unary, seq(
			optional(seq($.Token_OpenParen, alias($.Token_Ident, $.pragma_identifier), $.Token_CloseParen)), // for #relative(i16)			
			$.array_type_prefix,
			prec.dynamic(1, field('type', choice($._type, $.compound_literal))),
    )),

		struct_member: $ => seq(
			list1($.Token_Comma,
						seq(optional(alias($.Token_using, $.keyword)), $.Token_Ident)),
			$.Token_Colon,
			$._type,
			optional($.Token_String), // x:int 'tag_str'
		),

    struct_type: $ => seq(
      alias($.Token_struct, $.keyword),
      optional(field('parameters', $.parameter_list)),
			optional(field('align_size', $.Token_Integer)),  // eat up number after '#align'
      optional(seq(
        alias($.Token_where, $.keyword),
        list1($.Token_Comma, $._expression)
      )),
      $.Token_OpenBrace,
      list($.Token_Comma, $.struct_member),
      optional($.Token_Comma),
      $.Token_CloseBrace,
    ),

    map_type: $ => prec(op_prec.l_unary, seq(
      alias($.Token_map, $.keyword),
      $.Token_OpenBracket, field('key', $._type), $.Token_CloseBracket,
      field('value', $._type),
    )),

    _expression: $ => prec.right(1, choice(
			$.Token_Integer,
			choice($.Token_Float, seq($.Token_Integer, $.Token_Float), seq($.Token_Integer, $.Token_Period)),
			$.Token_Imag,
			$.Token_Rune,
			$.Token_String,
			$.Token_context,
			
			//$.compound_literal,
			$.Token_Ident,
      $.left_unary_expression,
      $.right_unary_expression,
      $.binary_expression,
      $.ternary_expression,
      $.type_conversion,
      $._parenthesized_expression,
      $.index_expression,
      $.selector_expression,
      $.proc_literal,
      $.proc_group,
      $.proc_call,
      $._type,
    )),

    type_conversion: $ => prec(op_prec.l_unary, seq(
      choice(
        seq(
          alias(choice($.Token_cast, $.Token_transmute), $.keyword),
          $.Token_OpenParen, $._type, $.Token_CloseParen,
        ),
        alias($.Token_auto_cast, $.operator),
      ),
      $._expression,
    )),

    index_expression: $ => prec(op_prec.r_unary, seq(
      field('operand', $._expression),
      $.Token_OpenBracket,
      choice(
        field('index', list1($.Token_Comma, $._expression)),
        seq(
          optional(field('start', $._expression)),
          alias($.Token_Colon, $.operator),
          optional(field('end', $._expression))
        ),
      ),
      $.Token_CloseBracket,
    )),

    proc_literal: $ => prec.right(20, seq(
      $._proc_type,
			optional($.Token_Semicolon),			
      optional(seq(
        alias($.Token_where, $.keyword),
        list1($.Token_Comma, $._expression)
      )),
			optional($.Token_Semicolon),
      choice(
        $.block,
        $.Token_Undef //'---'
      ),
    )),

    _proc_type: $ => prec.right(10, seq(
      alias($.Token_proc, $.keyword),
      optional($._calling_convention),
      field('parameters', $.parameter_list),
      optional(seq(
        alias($.Token_ArrowRight, $.operator),
        field('result', choice(
          $.parameter_list,
          $._type,
          alias($.Token_Not, $.keyword)
        ))
      )),
    )),

    parameter_list: $ => prec.right(10, seq(
      $.Token_OpenParen,
      list($.Token_Comma,
					 $.parameter_declaration,
					),
      $.Token_CloseParen
    )),

    proc_call: $ => prec(op_prec.r_unary, seq(
      choice(
				field('procedure', $._expression),
				seq(
					field('caller', $._expression),
					alias($.Token_ArrowRight, $.operator),
					field('member_proc', $.Token_Ident)
				),
			),
			optional($.Token_Period),
      $.Token_OpenParen,
			optional($.Token_Comma), // eat a comma for fmt.println(#procedure, "args here")
			optional(field('arguments', $.initializer_list)),
			$.Token_CloseParen,
    )),

    initializer_list: $ => prec.right(seq(
      list1($.Token_Comma, choice($._expression, $.single_assignment, $.compound_literal)),
      optional($.Token_Comma),
    )),

    single_assignment: $ => seq(
      field('lhs', $._expression), $.Token_Eq, field('rhs', choice($._expression, $.compound_literal)),
    ),

    assignment_statement: $ => prec.right(seq(
      field('lhs', choice($._expression, list1($.Token_Comma, $._var_identifier))),
      alias(choice($.Token_AddEq, $.Token_SubEq, $.Token_MulEq, $.Token_QuoEq, $.Token_ModEq, $.Token_ModModEq,
									 $.Token_AndEq, $.Token_OrEq, $.Token_XorEq, $.Token_AndNotEq, $.Token_ShlEq, $.Token_ShrEq,
									 $.Token_CmpAndEq, $.Token_CmpOrEq, $.Token_Eq), $.operator),
      field('rhs', list1($.Token_Comma, choice($._expression, $.compound_literal))),
    )),

    if_statement: $ => prec.right(seq(
      optional(field('label', seq($._label_identifier, $.Token_Colon))),
      alias(choice($.Token_if, $.Token_when), $.keyword),
      optional(seq(
        field('initializer', $._statement),
        $.Token_Semicolon,
      )),
      field('condition', $._expression),
      field('if_true', choice(
        seq(alias($.Token_do, $.keyword), $._statement, ),
				$.block,
      )),
      optional(seq(
        alias($.Token_else, $.keyword),
        field('if_false', choice(
          $.if_statement,
          seq(alias($.Token_do, $.keyword), $._statement, ),
          $.block,
        )),
      )),
    )),

    for_statement: $ => prec.right(1, seq(
      optional(field('label', seq($._label_identifier, $.Token_Colon))),
      alias($.Token_for, $.keyword),
      optional(choice(
        $._range_clause,
        $._for_empty_clause,
        $._for_full_clause,
        $._for_conditional_clause,
        $._for_conditional_and_update_clause,
        $._for_init_clause,
        $._for_init_and_update_clause,
      )),
      field('body', choice(
        seq(alias($.Token_do, $.keyword), $._statement),
        $.block,
      )),
    )),

    _for_full_clause: $ => seq(
      field('initializer', $._simple_statement),
      $.Token_Semicolon,
      field('condition', $._expression),
      $.Token_Semicolon,
      optional(field('update', $._simple_statement)),
    ),

    _for_empty_clause: $ => seq($.Token_Semicolon, $.Token_Semicolon),

    _for_conditional_clause: $=> seq(field('condition', $._expression)),

    _for_conditional_and_update_clause: $ => prec.left(seq(
      $.Token_Semicolon,
      field('condition', $._expression),
      $.Token_Semicolon,
      optional(field('update', $._simple_statement)),
    )),

    _for_init_and_update_clause: $ => seq(
      field('initializer', $._simple_statement),
      $.Token_Semicolon,
      $.Token_Semicolon,
      field('update', $._simple_statement),
    ),

    _for_init_clause: $ => seq(
      field('initializer', $._simple_statement),
      $.Token_Semicolon,
      $.Token_Semicolon,
    ),

    _range_clause: $ => prec.right(10, seq(
      list($.Token_Comma, field('name', $.Token_Ident)),
      alias($.Token_in, $.keyword),
      field('range',$._expression),
    )),

    right_unary_expression: $ => prec(op_prec.r_unary, seq(
      field('operand', $._expression),
      field('operator', alias(choice($.Token_Pointer, $.Token_or_return), $.operator)),
    )),

    left_unary_expression: $ => prec.right(op_prec.l_unary, seq(
      field('operator', alias(choice($.Token_Add, $.Token_Sub, $.Token_Xor, $.Token_And, $.Token_Not, $.Token_Ellipsis), $.operator)),
			choice(
				field('operand', $._expression),
				$.compound_literal),
    )),

    binary_expression: $ => {
      const table = [
        [op_prec.control_flow, $.Token_or_else],
        [op_prec.multiplicative, choice($.Token_Mul, $.Token_Quo, $.Token_Mod, $.Token_Shl, $.Token_Shr, $.Token_And, $.Token_AndNot)],
        [op_prec.membership, choice($.Token_in, $.Token_not_in)],
        [op_prec.additive, choice($.Token_Add, $.Token_Sub, $.Token_Xor, $.Token_Or)],
        [op_prec.comparison, choice($.Token_Gt, $.Token_Lt, $.Token_GtEq, $.Token_LtEq, $.Token_CmpEq, $.Token_NotEq)],
        [op_prec.range, choice($.Token_Ellipsis, $.Token_RangeHalf, $.Token_RangeFull)],
        [op_prec.and, $.Token_CmpAnd],
        [op_prec.or, $.Token_CmpOr],
      ];
      return choice(...table.map(
        ([p, o]) => prec.left(p, seq(
          field('left', $._expression),
					field('operator', alias(o, $.operator)),
					field('right', choice($._expression, $.compound_literal)),
        )),
      ));
    },

    compound_literal: $ => prec.dynamic(-1, seq(
      optional(field('type', $._simple_type)),
      choice($.Token_OpenBrace, $.Token_OpenParen),
			optional(field('contents', choice($.initializer_list, $.compound_literal_list))),
			choice($.Token_CloseBrace, $.Token_CloseParen),
    )),

    _label_identifier: $ => alias($.Token_Ident, $.label_identifier),
		_var_identifier: $ => alias($.Token_Ident, $.var_identifier),
    _package_identifier: $ => alias($.Token_Ident, $.package_identifier),
