test/corpus/source_file.txt
================================================================================
Empty package
================================================================================

package empty

--------------------------------------------------------------------------------

(source_file (package_clause (Token_package) (package_identifier)) (Token_Semicolon)) 

================================================================================
Package imports
================================================================================

package imports

import foo "core:foo"
import "core:bar"

--------------------------------------------------------------------------------

(source_file
 (package_clause (Token_package) (package_identifier)) (Token_Semicolon)
 (top_level
  (import_declaration (keyword) (package_identifier) (Token_String))) (Token_Semicolon)
 (top_level
  (import_declaration (keyword) (Token_String))) (Token_Semicolon)) 
